--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/MAsad-Nawaz/ecommerce_api#readme",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.1",
     "body-parser": "^1.20.0",
     "concurrently": "^7.1.0",
     "cors": "^2.8.5",
@@ -27,6 +28,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.1",
     "nodemon": "^2.0.15",
+    "react-redux": "^8.0.1",
     "stripe": "^8.219.0"
   }
 }
