--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mongoose": "^6.3.1",
     "nodemon": "^2.0.15",
     "react-redux": "^8.0.1",
+    "redux-persist": "^6.0.0",
     "stripe": "^8.219.0"
   }
 }
